add network attachment APIs
